src/test/ui/rfc-2632-const-trait-impl/stability.stderr
error: `<Int as Add>::add` is not yet stable as a const fn
  --> $DIR/stability.rs:32:5
   |
LL |     Int(0) + Int(0);
   |     ^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: trait implementations cannot be const stable yet
  --> $DIR/stability.rs:10:1
   |
LL | / impl const std::ops::Sub for Int {
LL | |
LL | |     type Output = Self;
LL | |
...  |
LL | |     }
LL | | }
   | |_^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information

error: aborting due to 2 previous errors

